<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".registration.SignUpActivity">


    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        />


    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn"
        app:layout_constraintEnd_toStartOf="@+id/edtLastName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_login"
        android:padding="14dp"
        android:layout_marginStart="30dp"
        android:paddingStart="26dp"
        android:textAlignment="textStart"/>


    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:textColorHint="@color/white"
        android:layout_marginEnd="30dp"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:maxLength="20"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtFirstName"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_login"
        android:padding="14dp"
        android:drawablePadding="6dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>

    <EditText
        android:id="@+id/edtEmailSignUp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login"
        android:padding="16dp"
        android:drawablePadding="6dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>


    <EditText
        android:id="@+id/edtPassSignUp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:maxLength="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailSignUp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login"
        android:padding="16dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_rounded"
        app:layout_constraintTop_toBottomOf="@+id/edtPassSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtLogInSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="40dp"/>


    <TextView
        android:id="@+id/txtLogInSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtAlreadyAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>