<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".registration.LoginActivity">

    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn"
        android:drawableStart="@drawable/ic_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_login"
        android:padding="14dp"
        android:drawablePadding="6dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>

    <EditText
        android:id="@+id/edtPassLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:maxLength="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin"
        android:drawableStart="@drawable/ic_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login"
        android:padding="10dp"
        android:drawablePadding="6dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"/>


    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassLogin"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_rounded"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="18sp"/>


















</androidx.constraintlayout.widget.ConstraintLayout>